--- a/README
+++ b/README
@@ -6,8 +6,10 @@ tmp/ - Temporary storage
 public/ - Content (images, css, etc. available to the public)
 config.ru - This file is used by Rack-based servers to start the application.
 ../data - For persistent data
-.openshift/action_hooks/build - Script that gets run every push, just prior to
-    starting your app
+.openshift/action_hooks/pre_build - Script that gets run every git push before the build
+.openshift/action_hooks/build - Script that gets run every git push as part of the build process (on the CI system if available)
+.openshift/action_hooks/deploy - Script that gets run every git push after build but before the app is restarted
+.openshift/action_hooks/post_deploy - Script that gets run every git push after the app is restarted
 
 
 Environment Variables
